# Stellar-Game-Studio

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json
games/zk-trails/: .env.example  .gitignore  Cargo.toml  README.md  package.json
games/zk-trails/backend/: .env.example  README.md  package.json
games/zk-trails/backend/circuits/: location_proof.json
games/zk-trails/backend/src/: index.ts  missions.ts
games/zk-trails/backend/src/config/: missions.ts
games/zk-trails/backend/src/data/: missions.json
games/zk-trails/backend/src/models/: Mission.ts  Player.ts
games/zk-trails/backend/src/routes/: missions.ts  players.ts  zk.ts
games/zk-trails/backend/src/services/: proofService.ts  stellarService.ts  zkProof.ts  zkService.ts
games/zk-trails/circuits/challenge_proof/: Nargo.toml
games/zk-trails/circuits/challenge_proof/src/: main.nr
games/zk-trails/circuits/location_proof/: Nargo.toml  test_verification.py
games/zk-trails/circuits/swap_proof/: Nargo.toml
games/zk-trails/contracts/mission-manager/: Cargo.toml  README.md
games/zk-trails/contracts/zk-trails/: Cargo.toml  README.md
games/zk-trails/contracts/zk-verifier/: Cargo.toml
games/zk-trails/docs/: ARCHITECTURE.md
games/zk-trails/frontend/: index.html  package-lock.json  package.json  requirements.md  tailwind.config.ts  vercel.json  vite.config.ts
games/zk-trails/frontend/src/: App.tsx  index.css  vite-env.d.ts
games/zk-trails/scripts/: complete_zk_mission.sh  deploy-remaining.ts  deploy.ts  test-contracts.ts  test-manual.sh  test-mission-flow.ts
(+62 files in other folders)
